--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,7 +7,15 @@ project(EmbedonixLibraries
   LANGUAGES CXX
 )
 
-add_library(libinfo
-        Embedonix/LibInfo.cpp Embedonix/LibInfo.h)
+set(CMAKE_DEBUG_POSTFIX d)
+
+set(EMBEDONIX_LIBRARY_FILE_PREFIX "lib")
+
+add_library(${EMBEDONIX_LIBRARY_FILE_PREFIX}Info SHARED
+        Embedonix/Info.cpp Embedonix/Info.h)
+add_library(${EMBEDONIX_LIBRARY_FILE_PREFIX}InfoStatic STATIC
+        Embedonix/Info.cpp Embedonix/Info.h)
 
 
+# Some good sources to read
+#https://stackoverflow.com/questions/2152077/is-it-possible-to-get-cmake-to-build-both-a-static-and-shared-library-at-the-sam
