Fixe MSVC compatibility

--- a/libs/fileio/CMakeLists.txt
+++ b/libs/fileio/CMakeLists.txt
@@ -11,6 +11,7 @@ add_library(embedonix_simplelibs_fileio
         src/filereader.cpp)
 add_library(embedonix::simplelibs::fileio ALIAS embedonix_simplelibs_fileio)
 
+target_compile_features(embedonix_simplelibs_fileio PUBLIC cxx_std_20)
 target_include_directories(embedonix_simplelibs_fileio PUBLIC include)
 
 install(TARGETS embedonix_simplelibs_fileio
