--- a/libs/stringtools/CMakeLists.txt
+++ b/libs/stringtools/CMakeLists.txt
@@ -9,7 +9,8 @@ project(embedonix_simplelibs_stringtools VERSION 0.1.0 LANGUAGES CXX)
 
 # Add library to be compiled
 add_library(embedonix_simplelibs_stringtools
-        src/trim.cpp)
+        src/trim.cpp
+        include/embedonix/simplelibs/stringtools/printer.h)
 add_library(embedonix::simplelibs::stringtools ALIAS embedonix_simplelibs_stringtools)
 
 target_compile_features(embedonix_simplelibs_stringtools PUBLIC cxx_std_20)
