Major update - Added wrapped CSV parser - Renamed namespaces - Renamed functions to be part of the namespaces

--- a/libs/stringtools/CMakeLists.txt
+++ b/libs/stringtools/CMakeLists.txt
@@ -10,8 +10,10 @@ project(embedonix_simplelibs_stringtools VERSION 0.1.0 LANGUAGES CXX)
 # Add library to be compiled
 add_library(embedonix_simplelibs_stringtools
         src/trim.cpp
+        include/embedonix/simplelibs/stringtools/trim.h
         include/embedonix/simplelibs/stringtools/base.h
-        include/embedonix/simplelibs/stringtools/printer.h)
+        include/embedonix/simplelibs/stringtools/print.h
+        include/embedonix/simplelibs/stringtools/split.h)
 add_library(embedonix::simplelibs::stringtools ALIAS embedonix_simplelibs_stringtools)
 
 target_compile_features(embedonix_simplelibs_stringtools PUBLIC cxx_std_20)
