--- a/libs/parsers/CMakeLists.txt
+++ b/libs/parsers/CMakeLists.txt
@@ -16,9 +16,11 @@ target_compile_features(embedonix_simplelibs_parsers PUBLIC cxx_std_20)
 target_include_directories(embedonix_simplelibs_parsers PUBLIC include)
 
 target_link_libraries(embedonix_simplelibs_parsers
-        PUBLIC embedonix_simplelibs_math)
+        PUBLIC embedonix_simplelibs_math
+        PUBLIC embedonix_simplelibs_stringtools)
 target_include_directories(embedonix_simplelibs_parsers
-        PUBLIC "${CMAKE_SOURCE_DIR}/libs/math/include")
+        PUBLIC "${CMAKE_SOURCE_DIR}/libs/math/include"
+        PUBLIC "${CMAKE_SOURCE_DIR}/libs/stringtools/include")
 
 
 install(TARGETS embedonix_simplelibs_parsers
