Added to csv examples

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -7,6 +7,8 @@ cmake_minimum_required(VERSION 3.5...3.20)
 
 project(embedonix_simplelibs_examples VERSION 0.1.0 LANGUAGES CXX)
 
+# Get resource dir that resides above current folder
+cmake_path(GET CMAKE_CURRENT_SOURCE_DIR PARENT_PATH RESOURCES_DIR)
 
 # Example fileio
 add_executable(fileio
@@ -18,12 +20,7 @@ target_link_libraries(fileio PRIVATE embedonix_simplelibs_fileio
         PRIVATE embedonix_simplelibs_stringtools)
 target_include_directories(fileio PUBLIC "F:\\Embedonix\\simplelibs-dbg\\include")
 
-
-# Get resource dir that resides above current folder
-cmake_path(GET CMAKE_CURRENT_SOURCE_DIR PARENT_PATH RESOURCES_DIR)
-set(RANDOM_FILES_DIR "${RESOURCES_DIR}/examples/resources/random-files")
-
-install(DIRECTORY "${RANDOM_FILES_DIR}"
+install(DIRECTORY "${RESOURCES_DIR}/examples/resources/random-files"
         DESTINATION "${CMAKE_BINARY_DIR}/resources")
 
 # Example csvparsers
@@ -35,6 +32,9 @@ target_link_libraries(csvparser PRIVATE embedonix_simplelibs_parsers
         PRIVATE embedonix_simplelibs_fileio
         PRIVATE embedonix_simplelibs_stringtools)
 target_include_directories(csvparser PUBLIC "F:\\Embedonix\\simplelibs-dbg\\include")
+
+install(DIRECTORY "${RESOURCES_DIR}/examples/resources/csv-files"
+        DESTINATION "${CMAKE_BINARY_DIR}/resources")
 
 add_executable(math
         math/math.cpp)
